<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="unique1_tag"
    android:fitsSystemWindows="true"
    tools:context=".ui.about.AboutActivity">




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.about.AboutActivity">

        <ImageView
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
        android:src="@drawable/roundlogo" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/about_title"
            style="@style/TextView.Primary.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About:" />


        <TextView
            android:id="@+id/about"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/about_text" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/contact_title"
            style="@style/TextView.Primary.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:" />

        <TextView
            android:id="@+id/textContact"
            android:layout_width="300dp"
            android:autoLink="email"
            android:layout_height="wrap_content"
            android:text="@string/email" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/policy_title"
            style="@style/TextView.Primary.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data protection:" />

        <TextView
            android:id="@+id/DataPolicyText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/policydata" />


    </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout4"
            android:layout_width="301dp"
            android:layout_height="150dp"
            android:layout_below="@+id/layout3"
            android:layout_alignStart="@+id/layout3"
            android:layout_alignEnd="@+id/layout3"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ll"
                android:layout_width="45dp"
                android:layout_height="40dp"

                android:src="@drawable/redissvector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.672" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:text="@string/rights"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</LinearLayout>
</ScrollView>
